add video title

--- a/index.html
+++ b/index.html
@@ -431,6 +431,7 @@ new Vue({
     return {
       url: '', // 在线链接
       tips: 'm3u8 视频在线提取工具', // 顶部提示
+      title: '', // 视频标题
       isPause: false, // 是否暂停下载
       isGetMP4: false, // 是否转码为 MP4 下载
       durationSecond: 0, // 视频持续时长
@@ -464,6 +465,7 @@ new Vue({
   },
 
   created() {
+    this.getTitle();
     this.getSource();
     window.addEventListener('keyup', this.onKeyup)
   },
@@ -478,6 +480,16 @@ new Vue({
       let { href } = location
       if (href.indexOf('?source=') > -1) {
         this.url = href.split('?source=')[1]
+      }
+    },
+
+    // 获取视频标题
+    getTitle(){
+      let { href } = location
+      const currentUrl = new URL(location.href)
+      const title = currentUrl.searchParams.get('title')
+      if(title) {
+        this.title = title
       }
     },
 
@@ -707,7 +719,11 @@ new Vue({
         this.finishList[index].status = 'finish'
         this.finishNum++
         if (this.finishNum === this.rangeDownload.targetSegment) {
-          this.downloadFile(this.mediaFileList, this.formatTime(this.beginTime, 'YYYY_MM_DD hh_mm_ss'))
+          let fileName = this.title || this.formatTime(this.beginTime, 'YYYY_MM_DD hh_mm_ss')
+          if(document.title !== 'm3u8 downloader'){
+            fileName = document.title
+          }
+          this.downloadFile(this.mediaFileList, fileName)
         }
         callback && callback()
       })
@@ -811,7 +827,11 @@ new Vue({
     // 强制下载现有片段
     forceDownload() {
       if (this.mediaFileList.length) {
-        this.downloadFile(this.mediaFileList, this.formatTime(this.beginTime, 'YYYY_MM_DD hh_mm_ss'))
+        let fileName = this.title || this.formatTime(this.beginTime, 'YYYY_MM_DD hh_mm_ss')
+        if(document.title !== 'm3u8 downloader'){
+          fileName = document.title
+        }
+        this.downloadFile(this.mediaFileList, fileName)
       } else {
         alert('当前无已下载片段')
       }
