fix get document.title

--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ new Vue({
         if (this.finishNum === this.rangeDownload.targetSegment) {
           let fileName = this.title || this.formatTime(this.beginTime, 'YYYY_MM_DD hh_mm_ss')
           if(document.title !== 'm3u8 downloader'){
-            fileName = document.title
+            fileName = window.top.document.title
           }
           this.downloadFile(this.mediaFileList, fileName)
         }
@@ -829,7 +829,7 @@ new Vue({
       if (this.mediaFileList.length) {
         let fileName = this.title || this.formatTime(this.beginTime, 'YYYY_MM_DD hh_mm_ss')
         if(document.title !== 'm3u8 downloader'){
-          fileName = document.title
+          fileName = window.top.document.title
         }
         this.downloadFile(this.mediaFileList, fileName)
       } else {
